[package]
name = "bevy_egui_paneled_playground"
version = "0.0.1"
authors = ["jwilliams <bayswaterpc@gmail.com>"]
description = "A set of examples for Egui Paneled app with integration into Bevy"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.6", features = ["dynamic"] } // requires .cargo/config_fast_builds to config.toml
bevy = "0.6"
bevy_egui="0.10"
rand = "*"


[lib]
name = "egui_paneled_playground_lib"
path = "src/lib.rs"


[[bin]]
name = "egui_paneled_playground_app"
path = "src/main.rs"